force-app/main/default/objects/Ghost_Field_Coaching_Template__c/Ghost_Field_Coaching_Template__c.object-meta.xml
<CustomObject>
    <description>MR field coaching templates</description>
    <label>Field Coaching Template</label>
    <nameField>
        <displayFormat>FCT-{00000}</displayFormat>
        <label>Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Coaching Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>