force-app/main/default/objects/Ghost_Field_Coaching_Template__c/fields/Template_Title__c.field-meta.xml
<CustomField>
    <fullName>Template_Title__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>